[metadata]
name = owiener
version = 1.0.7
description = A Python3 implementation of the Wiener attack on RSA 
long_description = file: README.md
long_description_content_type = text/markdown
author = Nao Yonashiro
author_email = owan.orisano@gmail.com
python_requires = >=3.5.0
url = "https://github.com/orisano/owiener"
py_modules = owiener
include_package_data = true
license = MIT
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Security :: Cryptography
